# duckview

./: .gitignore  .markdownlint.json  404.html  README.md  hardwarelist.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
.github/: labels.json  make_labels.py
.github/workflows/: release_and_deploy_docs.yml
cdf/docker-desktop/: index.html
cdf/gpg-and-git/: index.html
cdf/gpg-on-ubuntu/: index.html
cdf/prerequisites/: index.html
cdf/ssh-on-ubuntu/: index.html
cdf/ubuntu/: index.html
cdf/vscode/: index.html
docs/: index.md  prfaq.md
docs/cdf/: gpg-and-git.md  gpg-on-ubuntu.md  prerequisites.md  ssh-on-ubuntu.md  ubuntu.md
docs/glossary/: gitflow.md  mark-down.md  working-with-github.md
docs/usage/: cloning-the-repo.md  opening-the-project.md
glossary/gitflow/: index.html
glossary/mark-down/: index.html
glossary/working-with-github/: index.html
prfaq/: index.html
search/: search_index.json
usage/cloning-the-repo/: index.html
usage/opening-the-project/: index.html
